src/app/globals.css
body {
  margin: 0;
  font-family: system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue","Noto Sans","Liberation Sans",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  color: #212529;
  background-color: #ffffff;
  -webkit-text-size-adjust: 100%;
  -webkit-tap-highlight-color: transparent;
}

*, ::after, ::before {
  box-sizing: border-box;
}

.container, .container-fluid {
  width: 100%;
  padding-right: calc(1.5rem * .5);
  padding-left: calc(1.5rem * .5);
  margin-right: auto;
  margin-left: auto;
}

@media (min-width: 576px) {
  .container {
    max-width: 540px;
  }
}

@media (min-width: 768px) {
  .container {
    max-width: 720px;
  }
}

@media (min-width: 992px) {
  .container {
    max-width: 960px;
  }
}

.list-group {
  margin-top: 32px;
  width: 100%;
  text-align: center;
}

.list-group {
  display: flex;
  flex-direction: column;
  padding-left: 0;
  margin-bottom: 0;
  border-radius: var(--bs-list-group-border-radius);
}

.list-group-item {
  margin-bottom: 16px;
  border-radius: 4px;
  padding: 16px 20px;
  box-shadow: rgba(10, 11, 13, 0.08) 0px 2px 4px 0px;
  font-size: 16px;
  color: #000000;
  position: relative;
  outline: none;
  background-color: rgba(255, 255, 255, 0.8);
}

.list-group-item {
  position: relative;
  display: block;
  text-decoration: none;
}

.list-group-item-action {
  width: 100%;
  text-align: inherit;
}

.list-group-item+.list-group-item {
  border-top-width: 0;
}

.list-group-item-action:focus, .list-group-item-action:hover {
  text-decoration: none;
  background-color: #f8f9fa;
}

a {
  color: inherit;
  text-decoration: none;
}

@media (prefers-color-scheme: dark) {
  html {
    color-scheme: dark;
  }
}

.container {
  max-width: 680px;
}

.background {
  position: fixed;
  width: 100%;
  height: 100%;
  top: 0px;
  z-index: -1;
  background-image: url(/profile-photo.jpg);
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center center;
  opacity: 0.25;
  filter: blur(50px);
}

.list-group {
  width: 100%;
  text-align: center;
}

.list-group-item {
  margin-bottom: 16px;
  border-radius: 4px;
  padding: 16px 20px;
  box-shadow: rgba(10, 11, 13, 0.08) 0px 2px 4px 0px;
  font-size: 16px;
  color: #000000;
  position: relative;
  outline: none;
  background-color: rgba(255, 255, 255, 0.8);
}

.list-group-item img {
  position: absolute;
  left: 4px;
  top: 4px;
  border-radius: 4px;
}

.list-group-item:hover {
  transition: all 0.2s ease-in-out;
  transform: scale(1.02);
}

.profile {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding-top: 64px;
  margin-bottom: 32px;
}

.profile_picture {
  width: 96px;
  height: 96px;
  border-radius: 48px;
}

.profile_name {
  margin: 0px;
  color: rgb(0, 0, 0);
  font-weight: 700;
  font-size: 20px;
  line-height: 1.5;
  text-overflow: ellipsis;
  max-width: 100%;
  white-space: nowrap;
  overflow: hidden;
}

.profile_description {
  margin-top: 4px;
}

.language {
  padding: 8px;
  border: 1px solid #000000;
  border-radius: 40px;
}

#portuguese-language-switcher {   
  position: absolute;
  top: 89px;
  display: none;
}

@media(min-width: 644px) {
  #portuguese-language-switcher {   
    position: absolute;
    top: 37px;
  }
}

.bottom_links {
  margin-top: 30px;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.bottom_links a {
  padding-left: 8px;
  padding-right: 8px;
  height: 32px;
  display: flex;
  align-items: center;
}

.email_icon {
  color: #000000;
  text-decoration: none;
  font-size: 32px;
  cursor: pointer;
}

.stickers {
  text-align: center;
  margin-bottom: 24px;
  cursor: pointer;
}

.nav-tabs {
  border-bottom: 1px solid #dee2e6;
}

.nav {
  display: -ms-flexbox;
  display: flex;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding-left: 0;
  margin-bottom: 0;
  list-style: none;
}
.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
  color: #495057;
  background-color: #fff;
  border-color: #dee2e6 #dee2e6 #fff;
}
.nav-tabs .nav-link {
  margin-bottom: -1px;
  background-color: transparent;
  border: 1px solid transparent;
  border-top-left-radius: 0.25rem;
  border-top-right-radius: 0.25rem;
}
.nav-link {
  display: block;
  padding: 0.5rem 1rem;
  color: #2096cc;
  text-decoration: none;
}
.nav-tabs .nav-link:focus, .nav-tabs .nav-link:hover {
  isolation: isolate;
  border-color: #e9ecef #e9ecef #dee2e6;
}

#loader-spinner {
  position: fixed;
  top: 10px;
  right: 10px;
  z-index: 3;
  display: none;
}

.loader {
  width: 48px;
  height: 48px;
  border: 5px solid #2096cc;
  border-bottom-color: transparent;
  border-radius: 50%;
  display: inline-block;
  box-sizing: border-box;
  animation: rotation 1s linear infinite;
}

@keyframes rotation {
  0% {
      transform: rotate(0deg);
  }
  100% {
      transform: rotate(360deg);
  }
}

.developed-by {
  margin-top: 44px;
}

.developed-by a {
  color: #2096cc;
}
[type=button]:not(:disabled), [type=reset]:not(:disabled), [type=submit]:not(:disabled), button:not(:disabled) {
  cursor: pointer;
}

.btn {
  display: inline-block;
  font-weight: 400;
  color: #212529;
  text-align: center;
  vertical-align: middle;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  border: 1px solid transparent;
  padding: 0.375rem 0.75rem;
  font-size: 1rem;
  line-height: 1.5;
  border-radius: 0.25rem;
  transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
}

.btn-primary {
  color: #fff;
  background-color: #2096cc;
  border-color: #2096cc;
}

.btn-primary[disabled] {
  background-color: rgba(32, 150, 204, 0.5);
  border-color: rgba(32, 150, 204, 0.5);
}

.autocomplete {
  padding-top: 30px;
  display: flex;
  justify-content: flex-end;
}

.autocomplete > div {
  width: 75%;
}

@media(min-width: 644px) {
  .autocomplete > div {
    width: 50%;
  }
}

#title-bar {
  display: none;
  position: fixed;
  left: env(titlebar-area-x, 0);
  top: env(titlebar-area-y, 0);
  height: calc(env(titlebar-area-height, 50px));
  width: env(titlebar-area-width, 100%);
  background: linear-gradient(to right, #2096cc, rgba(32, 150, 204, .5), #2096cc);
  backdrop-filter: saturate(180%) blur(20px);
  align-items: center;
  gap: 6px;
  z-index: 2;
  -webkit-app-region: drag;
  app-region: drag;
}

.window-controls-overlay #title-bar {
  display: flex;
}

.window-controls-overlay .autocomplete {
  position: fixed;
  padding-top: 1px;
  padding-right: 2px;
  left: env(titlebar-area-x, 0);
  top: env(titlebar-area-y, 0);
  height: env(titlebar-area-height, 50px);
  width: env(titlebar-area-width, 100%);
  z-index: 3;
}

.window-controls-overlay .autocomplete > div {
  width: 50%;
  -webkit-app-region: no-drag;
  app-region: no-drag;
}

@media(min-width: 768px) {
  .window-controls-overlay .autocomplete > div {
    width: 40%;
  }
}

@media(min-width: 1024px) {
  .window-controls-overlay .autocomplete > div {
    width: 30%;
  }
}

.window-controls-overlay .profile {
  padding-top: calc(env(titlebar-area-height, 50px) + 64px);
}

.window-controls-overlay #loader-spinner {
  top: calc(env(titlebar-area-height, 0) + 10px);
}

